--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodebb-plugin-bbcode-to-markdown",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "NodeBB BBCode to Markdown Plugin",
   "main": "library.js",
   "scripts": {
@@ -13,9 +13,10 @@
   "keywords": [
     "nodebb",
     "plugin",
-    "youtube",
-    "video",
-    "embed"
+    "bbcode",
+    "converter",
+    "phpbb",
+    "vBulletin"
   ],
   "author": {
     "name": "psychobunny",
